fine tune usersearch

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -8,7 +8,7 @@
       <h4 class="text-center" style="color:black">Found {{ found_users|length }} User with username : <em>{{message}}</em> </h4>
       <hr>
     {% else %}
-      <h2 style="color:black"> Found 0 users for the search term {{message}}</h2>
+      <h2 style="color:black"> Found 0 users with username {{message}}</h2>
       <hr>
     {% endif %}
     <div class="col md-3"></div>
