--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -8,7 +8,12 @@
       <h4 class="text-center" style="color:black">Found {{ found_users|length }} User with username : <em>{{message}}</em> </h4>
       <hr>
     {% else %}
-      <h2 style="color:black"> Found 0 users with username {{message}}</h2>
+      <h4 class="text-center"style="color:black"> Found 0 users with username {{message}} <br> <br>
+  Only users with profile photos appear on searches
+</h4>
+      <br>
+      <br>
+
       <hr>
     {% endif %}
     <div class="col md-3"></div>
@@ -25,12 +30,11 @@
     <div class="col-md-12">
       <h1>{{user.user.username}}
 
-        <a href="{% url 'sprofile' user_id=user.user.id %}" class="btn btn-block btn-info">View Profile</a>
+        <a href="{% url 'sprofile' user_id=user.user.id %}" class="btn btn-outline btn-info">View Profile</a>
 
       </h1>
 
     </div>
-    <!-- <div class="col-md-2"></div> -->
 
   </div>
   <!-- <h1>{{user.user.Profile.timestamp}}</h1> -->
