--- a/app/templates/image_details.html
+++ b/app/templates/image_details.html
@@ -14,9 +14,10 @@
   </div>
   <div class="col-sm-6">
     <div class="well" style="background-color:#F9F9F9;">
-      <img src="{{image.image.url}}" alt="{{image.image.caption}}"class="img-responsive">
+      <img src="{{image.image.url}}" alt="{{image.image.caption}}"class="img-responsive" style="width:600px;height:340px;">
+      <div class="text-center">
       <header style="margin-top:3%;">
-        <p style="float:left;margin-top:20px; font-weight:800">Posted By :</p>
+        <p style="float:left;margin-left:4px;margin-top:20px; font-weight:800">Posted By :</p>
         <img class="ml-10" src="{{image.image.url}}" alt="" style="height:50px;width:50px; border-radius:50%">
         <p  style="display:inline; margin:16px; font-weight:bolder; font-size:16px; margin-bottom:10px">{{image.user}}</p>
         <p style="font-size:12px;color:#DAAA4D; margin-top:10px">{{image.timestamp|timesince|upper}} ago</p>
@@ -37,6 +38,7 @@
       this is bulshit
       {% endfor %} -->
       <hr>
+    </div>
     </div>
   </div>
   <div class="col-sm-3">
