--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -13,12 +13,12 @@
 
             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-              
-                {% if prof.profilePhoto %}
+
+                <!-- {% if prof.profilePhoto %}
                     <img src="{{prof.profilePhoto.url}}" alt="" class="img-fluid" style="border-radius:50%;width:150px;height:150px;">
                 {% else %}
                     <img src="/static/img/avatar.png" alt="" class="img-fluid rounded-circle">
-                {% endif %}
+                {% endif %} -->
             </div>
             <div class="col-lg-1 col-md-1 col-xs-1 col-sm-1"></div>
             <div class="col-lg-5 col-md-5 col-xs-5 col-sm-5">
@@ -55,32 +55,34 @@
           <br>
           <!-- <a href="{% url "profile" %}">EDIT PROFILE</a> -->
 
-                {% for img in image%}
-            {% if img.user.id == user.id %}
+                {% for image in images%}
+            {% if image.user.id == user.id %}
             <div class="col-md-4 col-lg-4 col-sm-8 col-xs-8">
-                    {% if img.image %}
+                    {% if image.image %}
                     <div class="card">
                         <div class="card-header">
-                                <img src="{{img.profile.profilePhoto.url}}" class="img-fluid rounded-circle" style="width:8%;height:8%">
-                                {% if user.id == img.user.id %}
-                                <a href="{% url 'profile' %}">{{img.user.username}}</a>
+                                <!-- <img src="{{img.profile.profilePhoto.url}}" class="img-fluid rounded-circle" style="width:8%;height:8%"> -->
+                                {% if user.id == image.user.id %}
+                                <!-- <a href="{% url 'profile' %}">{{img.user.username}}</a> -->
+                                <a href="#">{{image.user.username}}</a>
+
                                 {% else %}
-                                <a href="#">{{img.user.username}}</a>
+                                <a href="#">{{image.user.username}}</a>
                                 {% endif %}
                         </div>
                         <div class="card-body">
-                            {% if img.image.url %}
-                                <img src="{{img.image.url}}" alt="img-fluid" style="width:100%; height:100%">
-                                {{img.caption}}
-                                <p>{{img.timestamp | timesince}} ago</p>
-                                {% if img.likes >= 1 %}
-                                <p><i class="fa fa-heart fa-2x ml-4" style="color:red"></i><b>{{img.likes}} likes</b></p>
+                            {% if image.image.url %}
+                                <img src="{{image.image.url}}" alt="img-fluid" style="width:100%; height:100%">
+                                {{image.caption | safe}}
+                                <p>{{image.timestamp | timesince}} ago</p>
+                                {% if image.likes >= 1 %}
+                                <p><i class="fa fa-heart fa-2x ml-4" style="color:red"></i><b>{{image.likes}} likes</b></p>
                                 {% endif %}
                             {% endif %}
                         </div>
                         <div class="card-footer">
                                 {% for comment in comments %}
-                                {% if img.id == comment.image.id %}
+                                {% if image.id == comment.image.id %}
                                 <p><b>{{comment.user}}</b>  {{comment.comments}}</p>
                                 <h6  style="font-size:12px"><i>{{comment.comment_date | timesince}} ago</i></h6>
                                 {% endif %}
