--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,9 +3,9 @@
 }
 
 #navbarr{
-  background: #0099F7;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #F11712, #0099F7);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #F11712, #0099F7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #0099F7;
+/* background: -webkit-linear-gradient(to right, #F11712, #0099F7);
+background: linear-gradient(to right, #F11712, #0099F7); */
 margin-bottom: 80px;
 }
 .top-images {
@@ -17,9 +17,9 @@ margin-bottom: 80px;
 }
 
 #navbarrr{
-  background: #0099F7;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #F11712, #0099F7);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #F11712, #0099F7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #0099F7;
+/* background: -webkit-linear-gradient(to right, #F11712, #0099F7);  */
+/* background: linear-gradient(to right, #F11712, #0099F7);  */
 margin-bottom:80px;
 }
 
